[package]
name = "bodycount"
version = "0.1.0"
authors = ["Owen Nelson <onelson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4.14"
structopt = "0.3.21"
simple-server = "0.4.0"
env_logger = "0.8.3"
serde_json = "1.0"
levenshtein = "1.0.5"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.opencv]
version = "0.51.0"